# ontosyx

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.analysis-sandbox  README.md  docker-compose.yml  mise.toml  ontosyx.bedrock.toml  ontosyx.toml  package.json  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ox-agent/: CLAUDE.md  Cargo.toml
crates/ox-agent/src/: hooks.rs  lib.rs  progress.rs  recipes.rs
crates/ox-agent/src/tools/: apply_ontology.rs  consult_knowledge.rs  edit_ontology.rs  execute_analysis.rs  explain.rs  introspect_source.rs  mod.rs  query_graph.rs  recall_memory.rs  schema_evolution.rs  search_recipes.rs  visualize.rs
crates/ox-api/: CLAUDE.md  Cargo.toml
crates/ox-api/src/: acl_enforcement.rs  audit_middleware.rs  collaboration.rs  config.rs  error.rs  main.rs  mcp.rs  metrics.rs  middleware.rs  model_router.rs  openapi.rs  principal.rs  schedule.rs  spawn_scoped.rs  sso.rs  state.rs  system_config.rs  validation.rs  workspace.rs  workspace_scope.rs
crates/ox-api/src/routes/: acl.rs  approvals.rs  audit.rs  auth.rs  chat.rs  config.rs  dashboards.rs  health.rs  knowledge.rs  lineage.rs  load.rs  mod.rs  models.rs  notifications.rs  ontology.rs  perspectives.rs  pins.rs  prompts_admin.rs  quality.rs  query.rs  recipes.rs  reports.rs  schedules.rs  sessions.rs  sources.rs  usage.rs  users.rs  workspaces.rs  ws.rs
crates/ox-api/src/routes/projects/: analysis.rs  decisions.rs  edit.rs  extend.rs  lifecycle.rs  mod.rs  refinement.rs  revisions.rs  streaming.rs  types.rs
crates/ox-api/src/routes/projects/helpers/: decisions.rs  fingerprint.rs  llm.rs  mod.rs  quality.rs  repo.rs  source.rs
crates/ox-brain/: CLAUDE.md  Cargo.toml
crates/ox-brain/src/: auth.rs  client_pool.rs  knowledge_rag.rs  knowledge_util.rs  lib.rs  model_resolver.rs  prompts.rs  provider.rs  schema_rag.rs
crates/ox-brain/src/schema/: diagnostics.rs  inline.rs  merge.rs  mod.rs  strict.rs  union.rs
crates/ox-compiler/: CLAUDE.md  Cargo.toml
crates/ox-compiler/src/: cost.rs  lib.rs
crates/ox-compiler/src/cypher/: expr.rs  load.rs  migration.rs  mod.rs  mutate.rs  params.rs  pattern.rs  query.rs  schema.rs  tests.rs
crates/ox-compiler/src/export/: cypher_ddl.rs  graphql.rs  mermaid.rs  mod.rs  owl_turtle.rs  python.rs  shacl.rs  typescript.rs
crates/ox-compiler/src/import/: mod.rs  owl_turtle.rs
crates/ox-core/: CLAUDE.md  Cargo.toml
crates/ox-core/src/: design_project.rs  error.rs  graph_audit.rs  graph_exploration.rs  lib.rs  load_plan.rs  match_query_ir.rs  ontology_diff.rs  progress.rs  query_bindings.rs  query_ir.rs  repo_insights.rs  source_analysis.rs  source_mapping.rs  source_schema.rs  table_clustering.rs  test_fixtures.rs  types.rs  widget_spec.rs
crates/ox-core/src/eval/: cases.rs  fixtures.rs  mod.rs  runner.rs
crates/ox-core/src/ontology_command/: execute.rs  mod.rs  reconcile.rs  tests.rs
crates/ox-core/src/ontology_input/: dtos.rs  exchange.rs  mod.rs  transform.rs
crates/ox-core/src/ontology_ir/: mod.rs  tests.rs  types.rs  validation.rs
crates/ox-core/src/quality/: assessment.rs  mod.rs  tests.rs  types.rs
crates/ox-memory/: CLAUDE.md  Cargo.toml
crates/ox-memory/src/: lib.rs  store.rs
crates/ox-memory/src/embedding/: mod.rs  noop.rs  onnx.rs
crates/ox-memory/src/vector/: mod.rs  pgvector.rs
crates/ox-runtime/: CLAUDE.md  Cargo.toml
crates/ox-runtime/src/: enrichment.rs  isolation.rs  lib.rs  memgraph.rs  neo4j.rs  neptune.rs  profiler.rs  registry.rs
crates/ox-source/: CLAUDE.md  Cargo.toml
crates/ox-source/src/: bigquery.rs  duckdb_source.rs  fetcher.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  postgres_fetcher.rs  registry.rs  repo.rs  sample.rs  snowflake.rs
crates/ox-source/src/analyzer/: ambiguous.rs  exclusions.rs  fk_inference.rs  mod.rs  pii.rs  report.rs  test_utils.rs
crates/ox-store/: CLAUDE.md  Cargo.toml
crates/ox-store/migrations/: 0001_initial_schema.sql  0001_schema.sql  0002_add_indices.sql  0002_indexes.sql  0003_foreign_keys.sql  0003_verification_hitl_config.sql  0004_rls.sql  0004_workspace_isolation.sql  0005_audit_log.sql  0006_cost_metering.sql  0007_data_lineage.sql  0008_approval_workflows.sql  0009_data_quality.sql  0010_fine_grained_acl.sql  0011_cascade_deletes.sql  0012_fix_numeric_to_float.sql  0013_compound_workspace_fks.sql  0014_model_management.sql  0015_knowledge_base.sql  0016_knowledge_enhancements.sql  0017_load_checkpoints.sql  0018_lineage_property_mappings.sql  0019_dashboard_sharing.sql  0020_notifications.sql
crates/ox-store/src/: lib.rs  models.rs  postgres.rs  store.rs
data/ecommerce/: reset.sh  schema.sql  seed.sql
data/olive-young/: example-queries.md  load.sh  ontology.json  reset-and-seed.sh  schema.sql  seed-data.sql  seed-enrich.cypher  seed.cypher  verify.sh
data/olive-young/scenarios/: s1-conflict-alert.cypher  s2-synergy-crosssell.cypher  s3-regulation-cascade.cypher  s4-safe-routine-engine.cypher  s5-influencer-roi.cypher
data/recipes/: anomaly-detection.toml  community-detection.toml  pagerank.toml  path-optimization.toml  similarity-analysis.toml  temporal-patterns.toml
docker/: init-app-user.sql
docs/: graph-insight-scenarios.md  queryir-progressive-schema.md
prompts/: agent_system.toml  chat_default.toml  design_ontology.toml  design_ontology_batch.toml  edit_ontology.toml  plan_load.toml  refine_ontology.toml  repo_analyze.toml  repo_navigate.toml  resolve_cross_edges.toml  select_widget.toml  translate_match_query.toml  translate_query.toml
scripts/: bedrock-sso.sh  build-sandbox.sh  dev.sh  download-jina-v5.sh  e2e-full.sh  e2e-test.sh  reset-dev.sh
web/: CLAUDE.md  E2E_TEST_SCENARIOS.md  README.md  SSO_SETUP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: command-format.ts  error-messages.ts  export-utils.ts  gap-to-edit-request.test.ts  gap-to-edit-request.ts  git-url.ts  guard-pending-edits.ts  ontology-index.ts  principal.ts  quality-utils.ts  use-auth.ts  (+4 more)
(+328 files in other folders)
