[package]
name = "ox-brain"
description = "Ontosyx LLM orchestration — natural language to IR translation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ox-core = { workspace = true }
ox-memory = { path = "../ox-memory" }
ox-store = { path = "../ox-store" }
branchforge = { workspace = true, features = ["aws", "cli-auth"] }
dashmap = "6"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures-core = "0.3"
tokio-stream = "0.1"
async-stream = "0.3.6"
toml = "0.9"
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
